<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<resources>
    <string name="app_name">Anemo</string>

    <string name="anemo_description">Local private storage</string>
    <string name="anemo_info">Files stored in the Anemo storage are private and other apps can\'t access them without the user\'s consent.</string>

    <string name="password_label">Anemo password</string>

    <string name="password_hint_field">Password</string>
    <string name="password_hint_repeat">Type again to confirm</string>
    <string name="password_hint_current">Current password</string>
    <string name="password_hint_new">New password</string>

    <string name="password_error_length">The password should have length at least %1$d</string>
    <string name="password_error_mismatch">The passwords do not match</string>
    <string name="password_error_wrong">Wrong password</string>

    <string name="password_input_title">Unlock storage</string>
    <string name="password_input_message">Type your Anemo password to unlock the Anemo Storage</string>
    <string name="password_input_action">Unlock</string>
    <string name="password_input_change">Change</string>

    <string name="password_set_title">Add password protection</string>
    <string name="password_set_message">Set a password to lock the access to the Anemo Storage</string>
    <string name="password_set_action">Set password</string>

    <string name="password_change_title">Change password</string>
    <string name="password_change_message">Change the password to unlock the Anemo Storage</string>
    <string name="password_change_action">Change</string>
    <string name="password_change_remove">Remove</string>

    <string name="password_reset_title">Reset password</string>
    <string name="password_reset_message">Warning! In order to reset your password all the files inside the Anemo Storage will be deleted.\nThis action can\'t be undone, proceed carefully.\nType \'%1$s\' below to confirm</string>
    <string name="password_reset_code">reset and erase</string>
    <string name="password_reset_action">Reset &amp; erase</string>

    <string name="receiver_label">Import into Anemo</string>

    <string name="receiver_notification_channel_title">Import files</string>
    <string name="receiver_notification_channel_description">Progress report for importing files into Anemo</string>

    <string name="receiver_importing_prepare">Importing file…</string>
    <string name="receiver_importing_message">Importing %1$s…</string>
    <string name="receiver_importing_done_ok">Imported to Anemo/%1$s/%2$s</string>
    <string name="receiver_importing_done_fail">Could not import %1$s. Try again</string>

    <string name="receiver_audio_default_name">Shared audio %1$s.mp3</string>
    <string name="receiver_image_default_name">Shared image %1$s.jpg</string>
    <string name="receiver_pdf_default_name">Shared pdf %1$s.pdf</string>
    <string name="receiver_video_default_name">Shared video %1$s.mp4</string>

    <string name="tile_title">Anemo storage</string>

    <string name="tile_lock">Lock Anemo</string>
    <string name="tile_unlock">Unlock Anemo</string>
    <string name="tile_status_locked">Now locked</string>
    <string name="tile_status_unlocked">Now unlocked</string>

    <string name="tile_auto_lock">Anemo storage was automatically locked</string>

    <string name="launcher_no_activity">Can\'t find system Files app</string>
    <string name="shortcut_config_long">Configuration</string>
    <string name="shortcut_config_short">Configure</string>
    <string name="shortcut_config_disabled">Configuration (disabled)</string>

    <string name="configuration_label">Configuration</string>
    <string name="configuration_shortcut">Show shortcut</string>
    <string name="configuration_protection">Protection</string>
    <string name="configuration_password_set">Set password</string>
    <string name="configuration_password_change">Change password</string>
    <string name="configuration_password_reset">Reset password</string>
    <string name="configuration_storage_lock_auto">Automatically lock storage after 15 minutes</string>
</resources>
