<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="?android:attr/dialogPreferredPadding"
    android:paddingTop="?android:attr/dialogPreferredPadding"
    android:paddingBottom="6dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <TextView
            style="@android:style/TextAppearance.Material.WindowTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tile_unlock" />

        <ImageView
            android:id="@+id/configurationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/configuration_label"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_configuration"
            android:tooltipText="@string/configuration_label" />
    </FrameLayout>

    <TextView
        style="@android:style/TextAppearance.Material.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/password_input_message"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        style="@android:style/TextAppearance.Material.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/passwordFieldView"
        android:text="@string/password_hint_field" />

    <EditText
        android:id="@+id/passwordFieldView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="128"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:textColor="@color/btn_colored_text" />

        <Button
            android:id="@+id/unlockButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_input_action"
            android:textColor="@color/btn_colored_text" />
    </LinearLayout>
</LinearLayout>
